# Ninjutso_SoraV2-state

./: .gitignore  CMakeLists.txt  README.md  main.c  meson.build
subprojects/: hidapi.wrap
